--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </style>
 </head>
 <body>
-  <img src="./images/bg-pattern-top.svg" class="top">
-  <img src="./images/bg-pattern-bottom.svg" class="bottom">
+  <img src="./images/bg-pattern-top.svg" alt="top" class="top">
+  <img src="./images/bg-pattern-bottom.svg" alt="bottom" class="bottom">
 
   <div class="card">
     <div class="profile">
